[project]
name = "economic-marl"
version = "0.1.0"
description = "Production-grade MARL simulation for tariffs, commodities, and gold dynamics"
authors = [{name="Your Name", email="you@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
